quad/cquads/parse.go
// line 1 "parse.rl"
// GO SOURCE FILE MACHINE GENERATED BY RAGEL; DO NOT EDIT

// Copyright 2014 The Cayley Authors. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

package cquads

import (
	"fmt"
	"unicode"

	"github.com/lytics/cayley/quad"
)

// line 30 "parse.go"
const quads_start int = 1
const quads_first_final int = 178
const quads_error int = 0

const quads_en_statement int = 1

// line 34 "parse.rl"

// Parse returns a valid quad.Quad or a non-nil error. Parse does
// handle comments except where the comment placement does not prevent
// a complete valid quad.Quad from being defined.
func Parse(statement string) (quad.Quad, error) {
	data := []rune(statement)

	var (
		cs, p int
		pe    = len(data)
		eof   = pe

		subject   = -1
		predicate = -1
		object    = -1
		label     = -1

		isEscaped bool
		isQuoted  bool

		q quad.Quad
	)

	// line 64 "parse.go"
	{
		cs = quads_start
	}

	// line 59 "parse.rl"

	// line 72 "parse.go"
	{
		if p == pe {
			goto _test_eof
		}
		switch cs {
		case 1:
			goto st_case_1
		case 0:
			goto st_case_0
		case 2:
			goto st_case_2
		case 3:
			goto st_case_3
		case 4:
			goto st_case_4
		case 5:
			goto st_case_5
		case 6:
			goto st_case_6
		case 7:
			goto st_case_7
		case 8:
			goto st_case_8
		case 9:
			goto st_case_9
		case 178:
			goto st_case_178
		case 179:
			goto st_case_179
		case 180:
			goto st_case_180
		case 181:
			goto st_case_181
		case 182:
			goto st_case_182
		case 183:
			goto st_case_183
		case 184:
			goto st_case_184
		case 185:
			goto st_case_185
		case 186:
			goto st_case_186
		case 187:
			goto st_case_187
		case 188:
			goto st_case_188
		case 189:
			goto st_case_189
		case 190:
			goto st_case_190
		case 191:
			goto st_case_191
		case 192:
			goto st_case_192
		case 193:
			goto st_case_193
		case 194:
			goto st_case_194
		case 195:
			goto st_case_195
		case 10:
			goto st_case_10
		case 11:
			goto st_case_11
		case 12:
			goto st_case_12
		case 13:
			goto st_case_13
		case 14:
			goto st_case_14
		case 15:
			goto st_case_15
		case 16:
			goto st_case_16
		case 17:
			goto st_case_17
		case 18:
			goto st_case_18
		case 19:
			goto st_case_19
		case 20:
			goto st_case_20
		case 21:
			goto st_case_21
		case 22:
			goto st_case_22
		case 23:
			goto st_case_23
		case 24:
			goto st_case_24
		case 25:
			goto st_case_25
		case 26:
			goto st_case_26
		case 27:
			goto st_case_27
		case 28:
			goto st_case_28
		case 29:
			goto st_case_29
		case 30:
			goto st_case_30
		case 31:
			goto st_case_31
		case 32:
			goto st_case_32
		case 33:
			goto st_case_33
		case 34:
			goto st_case_34
		case 35:
			goto st_case_35
		case 36:
			goto st_case_36
		case 37:
			goto st_case_37
		case 38:
			goto st_case_38
		case 39:
			goto st_case_39
		case 40:
			goto st_case_40
		case 41:
			goto st_case_41
		case 42:
			goto st_case_42
		case 43:
			goto st_case_43
		case 44:
			goto st_case_44
		case 45:
			goto st_case_45
		case 46:
			goto st_case_46
		case 47:
			goto st_case_47
		case 48:
			goto st_case_48
		case 49:
			goto st_case_49
		case 50:
			goto st_case_50
		case 51:
			goto st_case_51
		case 196:
			goto st_case_196
		case 197:
			goto st_case_197
		case 198:
			goto st_case_198
		case 199:
			goto st_case_199
		case 200:
			goto st_case_200
		case 201:
			goto st_case_201
		case 202:
			goto st_case_202
		case 203:
			goto st_case_203
		case 204:
			goto st_case_204
		case 205:
			goto st_case_205
		case 206:
			goto st_case_206
		case 207:
			goto st_case_207
		case 208:
			goto st_case_208
		case 209:
			goto st_case_209
		case 210:
			goto st_case_210
		case 211:
			goto st_case_211
		case 212:
			goto st_case_212
		case 213:
			goto st_case_213
		case 214:
			goto st_case_214
		case 215:
			goto st_case_215
		case 216:
			goto st_case_216
		case 217:
			goto st_case_217
		case 218:
			goto st_case_218
		case 219:
			goto st_case_219
		case 220:
			goto st_case_220
		case 221:
			goto st_case_221
		case 222:
			goto st_case_222
		case 223:
			goto st_case_223
		case 224:
			goto st_case_224
		case 225:
			goto st_case_225
		case 226:
			goto st_case_226
		case 227:
			goto st_case_227
		case 228:
			goto st_case_228
		case 229:
			goto st_case_229
		case 230:
			goto st_case_230
		case 231:
			goto st_case_231
		case 232:
			goto st_case_232
		case 233:
			goto st_case_233
		case 234:
			goto st_case_234
		case 235:
			goto st_case_235
		case 236:
			goto st_case_236
		case 237:
			goto st_case_237
		case 238:
			goto st_case_238
		case 239:
			goto st_case_239
		case 240:
			goto st_case_240
		case 241:
			goto st_case_241
		case 52:
			goto st_case_52
		case 53:
			goto st_case_53
		case 54:
			goto st_case_54
		case 55:
			goto st_case_55
		case 56:
			goto st_case_56
		case 57:
			goto st_case_57
		case 58:
			goto st_case_58
		case 59:
			goto st_case_59
		case 60:
			goto st_case_60
		case 61:
			goto st_case_61
		case 62:
			goto st_case_62
		case 63:
			goto st_case_63
		case 64:
			goto st_case_64
		case 65:
			goto st_case_65
		case 66:
			goto st_case_66
		case 67:
			goto st_case_67
		case 68:
			goto st_case_68
		case 69:
			goto st_case_69
		case 70:
			goto st_case_70
		case 71:
			goto st_case_71
		case 72:
			goto st_case_72
		case 73:
			goto st_case_73
		case 74:
			goto st_case_74
		case 75:
			goto st_case_75
		case 76:
			goto st_case_76
		case 77:
			goto st_case_77
		case 78:
			goto st_case_78
		case 79:
			goto st_case_79
		case 80:
			goto st_case_80
		case 81:
			goto st_case_81
		case 82:
			goto st_case_82
		case 83:
			goto st_case_83
		case 84:
			goto st_case_84
		case 85:
			goto st_case_85
		case 86:
			goto st_case_86
		case 87:
			goto st_case_87
		case 88:
			goto st_case_88
		case 89:
			goto st_case_89
		case 90:
			goto st_case_90
		case 91:
			goto st_case_91
		case 92:
			goto st_case_92
		case 93:
			goto st_case_93
		case 94:
			goto st_case_94
		case 95:
			goto st_case_95
		case 96:
			goto st_case_96
		case 97:
			goto st_case_97
		case 98:
			goto st_case_98
		case 99:
			goto st_case_99
		case 100:
			goto st_case_100
		case 101:
			goto st_case_101
		case 102:
			goto st_case_102
		case 103:
			goto st_case_103
		case 104:
			goto st_case_104
		case 105:
			goto st_case_105
		case 106:
			goto st_case_106
		case 107:
			goto st_case_107
		case 108:
			goto st_case_108
		case 109:
			goto st_case_109
		case 110:
			goto st_case_110
		case 111:
			goto st_case_111
		case 112:
			goto st_case_112
		case 113:
			goto st_case_113
		case 114:
			goto st_case_114
		case 115:
			goto st_case_115
		case 116:
			goto st_case_116
		case 117:
			goto st_case_117
		case 118:
			goto st_case_118
		case 119:
			goto st_case_119
		case 120:
			goto st_case_120
		case 121:
			goto st_case_121
		case 122:
			goto st_case_122
		case 123:
			goto st_case_123
		case 124:
			goto st_case_124
		case 125:
			goto st_case_125
		case 126:
			goto st_case_126
		case 127:
			goto st_case_127
		case 128:
			goto st_case_128
		case 129:
			goto st_case_129
		case 130:
			goto st_case_130
		case 131:
			goto st_case_131
		case 132:
			goto st_case_132
		case 133:
			goto st_case_133
		case 134:
			goto st_case_134
		case 135:
			goto st_case_135
		case 136:
			goto st_case_136
		case 137:
			goto st_case_137
		case 138:
			goto st_case_138
		case 139:
			goto st_case_139
		case 140:
			goto st_case_140
		case 141:
			goto st_case_141
		case 142:
			goto st_case_142
		case 143:
			goto st_case_143
		case 144:
			goto st_case_144
		case 145:
			goto st_case_145
		case 146:
			goto st_case_146
		case 147:
			goto st_case_147
		case 148:
			goto st_case_148
		case 149:
			goto st_case_149
		case 150:
			goto st_case_150
		case 151:
			goto st_case_151
		case 152:
			goto st_case_152
		case 153:
			goto st_case_153
		case 154:
			goto st_case_154
		case 155:
			goto st_case_155
		case 156:
			goto st_case_156
		case 157:
			goto st_case_157
		case 158:
			goto st_case_158
		case 159:
			goto st_case_159
		case 160:
			goto st_case_160
		case 161:
			goto st_case_161
		case 162:
			goto st_case_162
		case 163:
			goto st_case_163
		case 164:
			goto st_case_164
		case 165:
			goto st_case_165
		case 166:
			goto st_case_166
		case 167:
			goto st_case_167
		case 168:
			goto st_case_168
		case 169:
			goto st_case_169
		case 170:
			goto st_case_170
		case 171:
			goto st_case_171
		case 172:
			goto st_case_172
		case 173:
			goto st_case_173
		case 174:
			goto st_case_174
		case 175:
			goto st_case_175
		case 176:
			goto st_case_176
		case 177:
			goto st_case_177
		}
		goto st_out
	st1:
		if p++; p == pe {
			goto _test_eof1
		}
	st_case_1:
		switch data[p] {
		case 9:
			goto st1
		case 32:
			goto st1
		case 33:
			goto tr2
		case 34:
			goto tr3
		case 46:
			goto tr4
		case 92:
			goto tr5
		case 95:
			goto tr6
		}
		switch {
		case data[p] > 126:
			if 128 <= data[p] && data[p] <= 1114111 {
				goto tr2
			}
		case data[p] >= 36:
			goto tr2
		}
		goto tr0
	tr0:
		// line 85 "actions.rl"

		if p < len(data) {
			if r := data[p]; r < unicode.MaxASCII {
				return q, fmt.Errorf("%v: unexpected rune %q at %d", quad.ErrInvalid, data[p], p)
			} else {
				return q, fmt.Errorf("%v: unexpected rune %q (\\u%04x) at %d", quad.ErrInvalid, data[p], data[p], p)
			}
		}
		return q, quad.ErrIncomplete

		goto st0
		// line 608 "parse.go"
	st_case_0:
	st0:
		cs = 0
		goto _out
	tr2:
		// line 26 "actions.rl"

		subject = p

		goto st2
	tr203:
		// line 18 "actions.rl"

		isEscaped = true

		goto st2
	st2:
		if p++; p == pe {
			goto _test_eof2
		}
	st_case_2:
		// line 632 "parse.go"
		switch data[p] {
		case 9:
			goto tr7
		case 32:
			goto tr7
		case 33:
			goto st2
		case 46:
			goto st136
		case 92:
			goto st137
		}
		switch {
		case data[p] > 126:
			if 128 <= data[p] && data[p] <= 1114111 {
				goto st2
			}
		case data[p] >= 35:
			goto st2
		}
		goto tr0
	tr7:
		// line 42 "actions.rl"

		if subject < 0 {
			panic("unexpected parser state: subject start not set")
		}
		q.Subject = unEscape(data[subject:p], isQuoted, isEscaped)
		isEscaped = false
		isQuoted = false

		goto st3
	tr202:
		// line 18 "actions.rl"

		isEscaped = true

		// line 42 "actions.rl"

		if subject < 0 {
			panic("unexpected parser state: subject start not set")
		}
		q.Subject = unEscape(data[subject:p], isQuoted, isEscaped)
		isEscaped = false
		isQuoted = false

		goto st3
	tr215:
		// line 22 "actions.rl"

		isQuoted = true

		// line 42 "actions.rl"

		if subject < 0 {
			panic("unexpected parser state: subject start not set")
		}
		q.Subject = unEscape(data[subject:p], isQuoted, isEscaped)
		isEscaped = false
		isQuoted = false

		goto st3
	st3:
		if p++; p == pe {
			goto _test_eof3
		}
	st_case_3:
		// line 705 "parse.go"
		switch data[p] {
		case 9:
			goto st3
		case 32:
			goto st3
		case 33:
			goto tr12
		case 34:
			goto tr13
		case 46:
			goto tr14
		case 92:
			goto tr15
		case 95:
			goto tr16
		}
		switch {
		case data[p] > 126:
			if 128 <= data[p] && data[p] <= 1114111 {
				goto tr12
			}
		case data[p] >= 36:
			goto tr12
		}
		goto tr0
	tr12:
		// line 30 "actions.rl"

		predicate = p

		goto st4
	tr153:
		// line 18 "actions.rl"

		isEscaped = true

		goto st4
	st4:
		if p++; p == pe {
			goto _test_eof4
		}
	st_case_4:
		// line 750 "parse.go"
		switch data[p] {
		case 9:
			goto tr17
		case 32:
			goto tr17
		case 33:
			goto st4
		case 46:
			goto st94
		case 92:
			goto st95
		}
		switch {
		case data[p] > 126:
			if 128 <= data[p] && data[p] <= 1114111 {
				goto st4
			}
		case data[p] >= 35:
			goto st4
		}
		goto tr0
	tr17:
		// line 51 "actions.rl"

		if predicate < 0 {
			panic("unexpected parser state: predicate start not set")
		}
		q.Predicate = unEscape(data[predicate:p], isQuoted, isEscaped)
		isEscaped = false
		isQuoted = false

		goto st5
	tr152:
		// line 18 "actions.rl"

		isEscaped = true

		// line 51 "actions.rl"

		if predicate < 0 {
			panic("unexpected parser state: predicate start not set")
		}
		q.Predicate = unEscape(data[predicate:p], isQuoted, isEscaped)
		isEscaped = false
		isQuoted = false

		goto st5
	tr165:
		// line 22 "actions.rl"

		isQuoted = true

		// line 51 "actions.rl"

		if predicate < 0 {
			panic("unexpected parser state: predicate start not set")
		}
		q.Predicate = unEscape(data[predicate:p], isQuoted, isEscaped)
		isEscaped = false
		isQuoted = false

		goto st5
	st5:
		if p++; p == pe {
			goto _test_eof5
		}
	st_case_5:
		// line 823 "parse.go"
		switch data[p] {
		case 9:
			goto st5
		case 32:
			goto st5
		case 33:
			goto tr22
		case 34:
			goto tr23
		case 46:
			goto tr24
		case 92:
			goto tr25
		case 95:
			goto tr26
		}
		switch {
		case data[p] > 126:
			if 128 <= data[p] && data[p] <= 1114111 {
				goto tr22
			}
		case data[p] >= 36:
			goto tr22
		}
		goto tr0
	tr22:
		// line 34 "actions.rl"

		object = p

		goto st6
	tr101:
		// line 18 "actions.rl"

		isEscaped = true

		goto st6
	st6:
		if p++; p == pe {
			goto _test_eof6
		}
	st_case_6:
		// line 868 "parse.go"
		switch data[p] {
		case 9:
			goto tr27
		case 32:
			goto tr27
		case 33:
			goto st6
		case 46:
			goto tr29
		case 92:
			goto st53
		}
		switch {
		case data[p] > 126:
			if 128 <= data[p] && data[p] <= 1114111 {
				goto st6
			}
		case data[p] >= 35:
			goto st6
		}
		goto tr0
	tr27:
		// line 60 "actions.rl"

		if object < 0 {
			panic("unexpected parser state: object start not set")
		}
		q.Object = unEscape(data[object:p], isQuoted, isEscaped)
		isEscaped = false
		isQuoted = false

		goto st7
	tr100:
		// line 18 "actions.rl"

		isEscaped = true

		// line 60 "actions.rl"

		if object < 0 {
			panic("unexpected parser state: object start not set")
		}
		q.Object = unEscape(data[object:p], isQuoted, isEscaped)
		isEscaped = false
		isQuoted = false

		goto st7
	tr113:
		// line 22 "actions.rl"

		isQuoted = true

		// line 60 "actions.rl"

		if object < 0 {
			panic("unexpected parser state: object start not set")
		}
		q.Object = unEscape(data[object:p], isQuoted, isEscaped)
		isEscaped = false
		isQuoted = false

		goto st7
	st7:
		if p++; p == pe {
			goto _test_eof7
		}
	st_case_7:
		// line 941 "parse.go"
		switch data[p] {
		case 9:
			goto st7
		case 32:
			goto st7
		case 33:
			goto tr32
		case 34:
			goto tr33
		case 46:
			goto tr34
		case 92:
			goto tr35
		case 95:
			goto tr36
		}
		switch {
		case data[p] > 126:
			if 128 <= data[p] && data[p] <= 1114111 {
				goto tr32
			}
		case data[p] >= 36:
			goto tr32
		}
		goto tr0
	tr32:
		// line 38 "actions.rl"

		label = p

		goto st8
	tr48:
		// line 18 "actions.rl"

		isEscaped = true

		goto st8
	st8:
		if p++; p == pe {
			goto _test_eof8
		}
	st_case_8:
		// line 986 "parse.go"
		switch data[p] {
		case 9:
			goto tr37
		case 32:
			goto tr37
		case 33:
			goto st8
		case 46:
			goto tr39
		case 92:
			goto st11
		}
		switch {
		case data[p] > 126:
			if 128 <= data[p] && data[p] <= 1114111 {
				goto st8
			}
		case data[p] >= 35:
			goto st8
		}
		goto tr0
	tr37:
		// line 69 "actions.rl"

		if label < 0 {
			panic("unexpected parser state: label start not set")
		}
		q.Label = unEscape(data[label:p], isQuoted, isEscaped)
		isEscaped = false
		isQuoted = false

		goto st9
	tr47:
		// line 18 "actions.rl"

		isEscaped = true

		// line 69 "actions.rl"

		if label < 0 {
			panic("unexpected parser state: label start not set")
		}
		q.Label = unEscape(data[label:p], isQuoted, isEscaped)
		isEscaped = false
		isQuoted = false

		goto st9
	tr60:
		// line 22 "actions.rl"

		isQuoted = true

		// line 69 "actions.rl"

		if label < 0 {
			panic("unexpected parser state: label start not set")
		}
		q.Label = unEscape(data[label:p], isQuoted, isEscaped)
		isEscaped = false
		isQuoted = false

		goto st9
	st9:
		if p++; p == pe {
			goto _test_eof9
		}
	st_case_9:
		// line 1059 "parse.go"
		switch data[p] {
		case 9:
			goto st9
		case 32:
			goto st9
		case 46:
			goto st178
		}
		goto tr0
	tr119:
		// line 60 "actions.rl"

		if object < 0 {
			panic("unexpected parser state: object start not set")
		}
		q.Object = unEscape(data[object:p], isQuoted, isEscaped)
		isEscaped = false
		isQuoted = false

		goto st178
	tr66:
		// line 69 "actions.rl"

		if label < 0 {
			panic("unexpected parser state: label start not set")
		}
		q.Label = unEscape(data[label:p], isQuoted, isEscaped)
		isEscaped = false
		isQuoted = false

		goto st178
	tr61:
		// line 22 "actions.rl"

		isQuoted = true

		// line 69 "actions.rl"

		if label < 0 {
			panic("unexpected parser state: label start not set")
		}
		q.Label = unEscape(data[label:p], isQuoted, isEscaped)
		isEscaped = false
		isQuoted = false

		goto st178
	tr114:
		// line 22 "actions.rl"

		isQuoted = true

		// line 60 "actions.rl"

		if object < 0 {
			panic("unexpected parser state: object start not set")
		}
		q.Object = unEscape(data[object:p], isQuoted, isEscaped)
		isEscaped = false
		isQuoted = false

		goto st178
	st178:
		if p++; p == pe {
			goto _test_eof178
		}
	st_case_178:
		// line 1132 "parse.go"
		switch data[p] {
		case 9:
			goto st178
		case 32:
			goto st178
		case 35:
			goto tr250
		}
		goto st0
	tr250:
		// line 82 "actions.rl"

		goto st179
	st179:
		if p++; p == pe {
			goto _test_eof179
		}
	st_case_179:
		// line 1153 "parse.go"
		goto st179
	tr34:
		// line 38 "actions.rl"

		label = p

		goto st180
	tr39:
		// line 69 "actions.rl"

		if label < 0 {
			panic("unexpected parser state: label start not set")
		}
		q.Label = unEscape(data[label:p], isQuoted, isEscaped)
		isEscaped = false
		isQuoted = false

		goto st180
	tr49:
		// line 18 "actions.rl"

		isEscaped = true

		// line 69 "actions.rl"

		if label < 0 {
			panic("unexpected parser state: label start not set")
		}
		q.Label = unEscape(data[label:p], isQuoted, isEscaped)
		isEscaped = false
		isQuoted = false

		goto st180
	st180:
		if p++; p == pe {
			goto _test_eof180
		}
	st_case_180:
		// line 1196 "parse.go"
		switch data[p] {
		case 9:
			goto st178
		case 32:
			goto st178
		case 33:
			goto st8
		case 35:
			goto tr252
		case 46:
			goto st10
		case 92:
			goto st11
		}
		switch {
		case data[p] > 126:
			if 128 <= data[p] && data[p] <= 1114111 {
				goto st8
			}
		case data[p] >= 36:
			goto st8
		}
		goto st0
	tr279:
		// line 38 "actions.rl"

		label = p

		goto st181
	tr264:
		// line 18 "actions.rl"

		isEscaped = true

		goto st181
	tr252:
		// line 82 "actions.rl"

		goto st181
	st181:
		if p++; p == pe {
			goto _test_eof181
		}
	st_case_181:
		// line 1245 "parse.go"
		switch data[p] {
		case 9:
			goto tr253
		case 32:
			goto tr253
		case 33:
			goto st181
		case 46:
			goto tr255
		case 92:
			goto st186
		}
		switch {
		case data[p] > 126:
			if 128 <= data[p] && data[p] <= 1114111 {
				goto st181
			}
		case data[p] >= 35:
			goto st181
		}
		goto st179
	tr253:
		// line 69 "actions.rl"

		if label < 0 {
			panic("unexpected parser state: label start not set")
		}
		q.Label = unEscape(data[label:p], isQuoted, isEscaped)
		isEscaped = false
		isQuoted = false

		goto st182
	tr263:
		// line 18 "actions.rl"

		isEscaped = true

		// line 69 "actions.rl"

		if label < 0 {
			panic("unexpected parser state: label start not set")
		}
		q.Label = unEscape(data[label:p], isQuoted, isEscaped)
		isEscaped = false
		isQuoted = false

		goto st182
	tr287:
		// line 22 "actions.rl"

		isQuoted = true

		// line 69 "actions.rl"

		if label < 0 {
			panic("unexpected parser state: label start not set")
		}
		q.Label = unEscape(data[label:p], isQuoted, isEscaped)
		isEscaped = false
		isQuoted = false

		goto st182
	st182:
		if p++; p == pe {
			goto _test_eof182
		}
	st_case_182:
		// line 1318 "parse.go"
		switch data[p] {
		case 9:
			goto st182
		case 32:
			goto st182
		case 46:
			goto st183
		}
		goto st179
	tr293:
		// line 69 "actions.rl"

		if label < 0 {
			panic("unexpected parser state: label start not set")
		}
		q.Label = unEscape(data[label:p], isQuoted, isEscaped)
		isEscaped = false
		isQuoted = false

		goto st183
	tr288:
		// line 22 "actions.rl"

		isQuoted = true

		// line 69 "actions.rl"

		if label < 0 {
			panic("unexpected parser state: label start not set")
		}
		q.Label = unEscape(data[label:p], isQuoted, isEscaped)
		isEscaped = false
		isQuoted = false

		goto st183
	st183:
		if p++; p == pe {
			goto _test_eof183
		}
	st_case_183:
		// line 1362 "parse.go"
		switch data[p] {
		case 9:
			goto st183
		case 32:
			goto st183
		case 35:
			goto tr250
		}
		goto st179
	tr281:
		// line 38 "actions.rl"

		label = p

		goto st184
	tr255:
		// line 69 "actions.rl"

		if label < 0 {
			panic("unexpected parser state: label start not set")
		}
		q.Label = unEscape(data[label:p], isQuoted, isEscaped)
		isEscaped = false
		isQuoted = false

		goto st184
	tr265:
		// line 18 "actions.rl"

		isEscaped = true

		// line 69 "actions.rl"

		if label < 0 {
			panic("unexpected parser state: label start not set")
		}
		q.Label = unEscape(data[label:p], isQuoted, isEscaped)
		isEscaped = false
		isQuoted = false

		goto st184
	st184:
		if p++; p == pe {
			goto _test_eof184
		}
	st_case_184:
		// line 1413 "parse.go"
		switch data[p] {
		case 9:
			goto st183
		case 32:
			goto st183
		case 33:
			goto st181
		case 35:
			goto tr252
		case 46:
			goto st185
		case 92:
			goto st186
		}
		switch {
		case data[p] > 126:
			if 128 <= data[p] && data[p] <= 1114111 {
				goto st181
			}
		case data[p] >= 36:
			goto st181
		}
		goto st179
	st185:
		if p++; p == pe {
			goto _test_eof185
		}
	st_case_185:
		switch data[p] {
		case 33:
			goto st181
		case 46:
			goto st185
		case 92:
			goto st186
		}
		switch {
		case data[p] > 126:
			if 128 <= data[p] && data[p] <= 1114111 {
				goto st181
			}
		case data[p] >= 35:
			goto st181
		}
		goto st179
	tr282:
		// line 38 "actions.rl"

		label = p

		goto st186
	tr266:
		// line 18 "actions.rl"

		isEscaped = true

		goto st186
	st186:
		if p++; p == pe {
			goto _test_eof186
		}
	st_case_186:
		// line 1478 "parse.go"
		switch data[p] {
		case 34:
			goto st187
		case 39:
			goto st187
		case 85:
			goto st188
		case 92:
			goto st187
		case 98:
			goto st187
		case 102:
			goto st187
		case 110:
			goto st187
		case 114:
			goto st187
		case 116:
			goto st187
		case 117:
			goto st192
		}
		goto st179
	st187:
		if p++; p == pe {
			goto _test_eof187
		}
	st_case_187:
		switch data[p] {
		case 9:
			goto tr263
		case 32:
			goto tr263
		case 33:
			goto tr264
		case 46:
			goto tr265
		case 92:
			goto tr266
		}
		switch {
		case data[p] > 126:
			if 128 <= data[p] && data[p] <= 1114111 {
				goto tr264
			}
		case data[p] >= 35:
			goto tr264
		}
		goto st179
	st188:
		if p++; p == pe {
			goto _test_eof188
		}
	st_case_188:
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st189
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto st189
			}
		default:
			goto st189
		}
		goto st179
	st189:
		if p++; p == pe {
			goto _test_eof189
		}
	st_case_189:
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st190
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto st190
			}
		default:
			goto st190
		}
		goto st179
	st190:
		if p++; p == pe {
			goto _test_eof190
		}
	st_case_190:
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st191
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto st191
			}
		default:
			goto st191
		}
		goto st179
	st191:
		if p++; p == pe {
			goto _test_eof191
		}
	st_case_191:
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st192
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto st192
			}
		default:
			goto st192
		}
		goto st179
	st192:
		if p++; p == pe {
			goto _test_eof192
		}
	st_case_192:
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st193
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto st193
			}
		default:
			goto st193
		}
		goto st179
	st193:
		if p++; p == pe {
			goto _test_eof193
		}
	st_case_193:
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st194
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto st194
			}
		default:
			goto st194
		}
		goto st179
	st194:
		if p++; p == pe {
			goto _test_eof194
		}
	st_case_194:
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st195
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto st195
			}
		default:
			goto st195
		}
		goto st179
	st195:
		if p++; p == pe {
			goto _test_eof195
		}
	st_case_195:
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st187
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto st187
			}
		default:
			goto st187
		}
		goto st179
	st10:
		if p++; p == pe {
			goto _test_eof10
		}
	st_case_10:
		switch data[p] {
		case 33:
			goto st8
		case 46:
			goto st10
		case 92:
			goto st11
		}
		switch {
		case data[p] > 126:
			if 128 <= data[p] && data[p] <= 1114111 {
				goto st8
			}
		case data[p] >= 35:
			goto st8
		}
		goto tr0
	tr35:
		// line 38 "actions.rl"

		label = p

		goto st11
	tr50:
		// line 18 "actions.rl"

		isEscaped = true
